<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_cheap_flights">Поиск дешевых\n
        авиабилетов</string>
    <string name="fly_away_musically">Музыкально отлететь</string>
    <string name="hint_from">Откуда - Москва</string>
    <string name="hint_to">Куда - Турция</string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="weekend">Выходные</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="phuket">Пхукет</string>
    <string name="back">обратно</string>
    <string name="date">дата</string>
    <string name="number_passengers_class">1,эконом</string>
    <string name="filters">фильтры</string>
    <string name="filters_2">Фильтр</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="no_data">Данные не загрузились</string>
    <string name="without_transfers">Без пересадок</string>
    <string name="price_chart">График цен</string>
    <string name="error_image">Ошибка массива с картинками</string>
</resources>