<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_black"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context="com.example.air_tickets.presentation.main_screen.MainTicketsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/search_cheap_flights"
        android:textAppearance="@style/title_1"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/background_1"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/custom_background"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageview_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_place_departure"
                style="@style/edittext_air_tickets_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:hint="@string/hint_from"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/edittext_place_arrival"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageview_search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:text="Минск" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="20dp"
                android:background="#5E5F61"
                app:layout_constraintBottom_toTopOf="@+id/edittext_place_arrival"
                app:layout_constraintEnd_toEndOf="@id/edittext_place_departure"
                app:layout_constraintStart_toStartOf="@+id/edittext_place_departure"
                app:layout_constraintTop_toBottomOf="@+id/edittext_place_departure"
                app:layout_constraintVertical_bias="0.5" />

            <EditText
                android:id="@+id/edittext_place_arrival"
                style="@style/edittext_air_tickets_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:hint="@string/hint_to"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintStart_toStartOf="@+id/edittext_place_departure"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/fly_away_musically"
        android:textSize="22sp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textAppearance="@style/title_2" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>

</LinearLayout>