<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_black"
    android:orientation="vertical"
    tools:context="com.example.air_tickets.presentation.AirTicketsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/search_cheap_flights"
        android:textAppearance="@style/some_id"
        android:translationY="-0.07sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:elevation="4dp"
        app:cardBackgroundColor="#2F3035"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/custom_background"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:layout_marginLeft="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="17dp">

                <EditText
                    android:id="@+id/edittext_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    tools:text="Минск"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:hint="@string/hint_from"
                    android:textColorHint="@color/grey_6"/>

                <EditText
                    android:id="@+id/edittext_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:hint="@string/hint_to"
                    android:textColorHint="@color/grey_6"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/some_id"
        android:textSize="22sp"
        android:textAppearance="@style/some_id2"
        android:translationY="-0.07sp" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

</LinearLayout>